--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: iSeq
 Title: Bayesian Hierarchical Modeling of ChIP-seq Data Through Hidden Ising Models
-Version: 1.2.5
-Date: 2011-4-4
+Version: 1.2.6
+Date: 2011-4-8
 Depends: R (>= 2.10.0)
 Author: Qianxing Mo
 Maintainer: Qianxing Mo  <moq@mskcc.org>
-Description: This package uses Bayesian hidden Ising models to identify IP-enriched genomic regions from ChIP-seq data. It can be used to analyze the ChIP-seq data with or without controls. 
+Description: This package uses Bayesian hidden Ising models to identify IP-enriched genomic regions from ChIP-seq data. It can be used to analyze ChIP-seq data with or without controls. 
 LazyData: yes
 License: GPL (>= 2)
 biocViews: ChIP-seq, next generation sequencing, massively parallel sequencing, bioinformatics
