--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: iSeq
 Title: Bayesian Hierarchical Modeling of ChIP-seq Data Through Hidden Ising Models
-Version: 1.7.1
-Date: 2011-9-14
+Version: 1.7.2
+Date: 2012-2-19
 Depends: R (>= 2.10.0)
 Author: Qianxing Mo
-Maintainer: Qianxing Mo  <moq@mskcc.org>
+Maintainer: Qianxing Mo  <qmo@bcm.edu>
 Description: This package uses Bayesian hidden Ising models to identify IP-enriched genomic regions from ChIP-seq data. It can be used to analyze ChIP-seq data with or without controls. 
 LazyData: yes
 License: GPL (>= 2)
